# ARFit-Kit

./: .gitignore  LICENSE  Package.swift  README.md  download_models.sh
core/: CMakeLists.txt
core/include/: ar_renderer.h  arfit_kit.h  body_tracker.h  garment_converter.h  gpu_backend.h  mesh.h  physics_engine.h  render_pipeline.h  texture.h  types.h
core/shaders/: fabric.metal  lighting.metal  occlusion.metal  physics.comp  physics.metal  physics.wgsl  shadows.metal
core/src/: ar_renderer.cpp  arfit_kit.cpp  body_tracker.cpp  garment_converter.cpp  mesh.cpp  physics_engine.cpp  render_pipeline.cpp  texture.cpp
core/src/gpu/: gpu_factory.cpp  metal_backend.h  metal_backend.mm  vulkan_backend.cpp  vulkan_backend.h  webgpu_backend.cpp  webgpu_backend.h
docs/: api-reference.md  architecture.md  getting-started.md
